--- a/common/common.scss
+++ b/common/common.scss
@@ -11,9 +11,30 @@
 		flex: 0 0 140rpx
 	}
 	
+	&__status {
+		flex: 0 0 140rpx;
+		text-align: right;
+		
+		&--wait {
+			color: #007AFF;
+		}
+		
+		&--done {
+			color: #4CD964;
+		}
+	}
+	
 	&__text {
 		flex: 1;
 		text-align: left;
+	}
+	
+	&__type {
+		flex: 0 0 80rpx;
+		
+		&--long {
+			flex: 0 0 130rpx;
+		}
 	}
 }
 // 重写样式
